--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -135,7 +135,7 @@
 
 .fly-1 {
   bottom: 147px;
-  left: 3px;
+  left: 15px;
   width: 60px;
   height: 48px;
   background: url(../images/fly-1.jpg) no-repeat;
@@ -149,4 +149,60 @@
   height: 78px;
   background: url(../images/fly-2.jpg) no-repeat;
   background-size: cover;
+}
+
+.yun {
+  position: absolute;
+  bottom: 200px;
+  right: 8px;
+  width: 133px;
+  height: 78px;
+  background: url(../images/yun.png) no-repeat;
+  background-size: 100%;
+  animation-name: initRight;
+  animation-duration: 50s;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+}
+
+@keyframes initRight {
+  from {
+    right: 8px;
+  }
+
+  50% {
+    right: 600px;
+  }
+
+  to {
+    right: 8px;
+  }
+}
+
+.yun2 {
+  position: absolute;
+  top: 11px;
+  left: 87px;
+  width: 133px;
+  height: 78px;
+  background: url(../images/yun2.png) no-repeat;
+  background-size: 100%;
+  animation-name: initLeft;
+  animation-duration: 50s;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+}
+
+@keyframes initLeft {
+  from {
+    left: 87px;
+  }
+
+  50% {
+    left: 590px;
+  }
+
+  to {
+    left: 87px;
+  }
 }
